# clipman-platform

./: Cargo.toml  ROADMAP.md
logs/: clipman.log.2024-12-12  clipman.log.2024-12-16
src/: config.rs  lib.rs  main.rs  state.rs
src/error/: app_error.rs  mod.rs
src/handlers/: auth_handler.rs  device_handler.rs  mod.rs  user_handler.rs  websocket_handler.rs
src/models/: clipboard.rs  device.rs  mod.rs  user.rs  users.rs
src/services/: auth_service.rs  clipboard_service.rs  device_service.rs  mod.rs  user_service.rs  websocket_service.rs
src/tests/: utils.rs
src/tests/auth/: auth_service_tests.rs
src/tests/state/: state_tests.rs
src/utils/: logger.rs  mod.rs
