[package]
name = "clipman-platform"
version = "0.1.0"
edition = "2021"

[dependencies]
axum = { version = "0.7", features = ["ws"] }
axum-server = "0.6"
tokio = { version = "1.0", features = ["full"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
futures = "0.3"
tower-http = { version = "0.5", features = ["cors"] }
dotenv = "0.15"
uuid = { version = "1.0", features = ["v4", "serde"] }
argon2 = "0.5.3"
rand = "0.8"
jsonwebtoken = "9.2"
mockall = "0.11"  # For testing