[package]
name = "clipman-platform"
version = "0.1.0"
edition = "2021"

[dependencies]
axum = { version = "0.7", features = ["ws"] }
tokio = { version = "1.0", features = ["full"] }
tower-http = { version = "0.5", features = ["trace", "cors"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
tracing = "0.1"
tracing-subscriber = "0.3"
tracing-appender = "0.2"
uuid = { version = "1.0", features = ["serde", "v4"] }
jsonwebtoken = "9.0"
dotenv = "0.15"
argon2 = "0.5"
futures = "0.3"
rand = "0.8"
axum-macros = { version = "0.5.0-alpha.1" }
chrono = { version = "0.4", features = ["serde"] }


time = { version = "0.3", features = ["formatting"] }

[lib]
name = "clipman_platform"
path = "src/lib.rs"

[[bin]]
name = "clipman-platform"
path = "src/main.rs"